hphp/test/zend/bad/ext/date/tests/DateTime_diff-fall-type2-type3.php
<?php

require 'examine_diff.inc';
define('PHPT_DATETIME_SHOW', PHPT_DATETIME_SHOW_DIFF);
require 'DateTime_data-fall-type2-type3.inc';

?>